[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "unify-link"
version = "1.0.0"
description = "Unified communication protocol library for embedded systems with Python bindings"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "*" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["communication", "protocol", "embedded", "motor", "encoder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

[project.urls]
Homepage = "https://github.com/yourusername/unify-link"
Documentation = "https://github.com/yourusername/unify-link"
Repository = "https://github.com/yourusername/unify-link.git"
Issues = "https://github.com/yourusername/unify-link/issues"

[tool.scikit-build]
cmake.minimum-version = "3.16"
cmake.build-type = "Release"
